src/test/deca/context/valid/testParamsMethod.deca
class A {
    float a;
    void increment(float x) {
        a = a + x;
    }
}
{
    A y = new A();
    y.increment(2);
}
